src/tests/errors/functions/008.ura
// errors/functions/008 — `ref` parameter requires a named variable
use "@/header"

fn bump(n int ref) void:
    n += 1

main():
    bump(5)
